# SeetaAIP

./: .gitignore  CMakeLists.txt  README.md  seeta_aip.h  seetax.h
cmake/: javaname.cmake
csharp/: DynamicLibrary.cs  Engine.cs  README.md  Struct.cs  Utils.cs
include/: seeta_aip.h  seeta_aip_affine.h  seeta_aip_alignment.h  seeta_aip_color_map.h  seeta_aip_dll.h  seeta_aip_engine.h  seeta_aip_font_ascii.h  seeta_aip_graphics2d.h  seeta_aip_image.h  seeta_aip_image_io.h  seeta_aip_opencv.h  seeta_aip_package.h  seeta_aip_package_v2.h  seeta_aip_platform.h  seeta_aip_plot.h  seeta_aip_plot_text.h  seeta_aip_shape.h  seeta_aip_struct.h
java/: CMakeLists.txt  javadoc.sh
java/src/: Engine.cpp  Engine.java  Exception.java  ImageData.java  JArray.h  JEnum.cpp  JEnum.h  JException.cpp  JException.h  JString.cpp  JString.h  JStruct.h  JavaHelper.h  Object.java  Package.cpp  Package.java  common.cpp  common.h  native.h
java/src/com/seetatech/aip/: Engine.java  LoadJNI.java  Package.java
java/src/seeta/aip/: Device.java  Engine.java  Exception.java  ImageData.java  ImageFormat.java  Instance.java  LoadJNI.java  Object.java  Package.java  Point.java  Result.java  Shape.java  ShapeType.java  Tag.java  Tensor.java  ValueType.java
java/test/: Test.java
module/: copy.cpp  delay.cpp  kernel32.cpp  log.cpp  rotate_image.cpp  test.cpp  tlog.cpp
python/: README_zh-CN.md
python/seetaaip/: _C.py  __init__.py  dtype.py  libfinder.py  struct.py  toc.py
python/test/: testaip.py  testtoc.py
python/test/data/: __init__.py  pack.py
script/: javaname.py
script/cmake/: android-arm64-v8a.sh  android-armeabi-v7a.sh  android-x86.sh  android-x86_64.sh  linux-ix86.sh  windows-vs2019.ps1
seeta/: seeta_aip_cpp.cpp  seeta_aip_cpp.h  seeta_aip_package.cpp  seeta_aip_package.h  seeta_aip_shape.h
test/: affine.cpp  dlload.cpp  engine.cpp  main.cpp  plot.cpp  rotate_image.cpp  struct.cpp
tools/: javaname.cpp
